<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@drawable/selected_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/person_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/osoba"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/place_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miejsce"
            android:textSize="14sp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end">

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/godzina"
            android:gravity="center_vertical"
            android:textSize="20sp"/>
        <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/godzina"
        android:gravity="center_vertical"
        android:textSize="20sp"/>
        <TextView
            android:id="@+id/id_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/godzina"
            android:gravity="center_vertical"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>